--- a/index.html
+++ b/index.html
@@ -1,38 +1,50 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Stage 0</title>
+  <link rel="stylesheet" href="/index.css">
+</head>
+<body>
+  <article data-testid="test-profile-card">
+    <header data-testid="test-user-name">Usman</header>
+    <p data-testid="test-user-bio">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, hic!
+    </p>
+    <p data-testid="test-user-time">Current time:</p>
 
-       <article data-testid="test-profile-card">
-            <header data-testid="test-user-name">Usman </header>
-            <p data-testid="test-user-name"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, hic!      </p>
-            <p data-testid="test-user-time"> Current time : </p>
-     
-     
-        <figure> 
-             <img src="https://zxlksbiurttzrwxvgryi.supabase.co/storage/v1/object/public/images/Gemini_Generated_Image_axx8qeaxx8qeaxx8.png" alt="#">
-              <figcaption>HIM</figcaption>    
-        </figure>   
-          <ul data-testid="test-user-social-links">
-              <li data-testid="test-user-social-twitter">Twitter</li>
-              <li data-testid="test-user-social-instagram">Instagram </li>
-              <li data-testid="test-user-social-tiktok">Tiktok</li>
-              <li data-testid="test-user-social-facebook">Facebook</li>
-          </ul>
-          <section>
-            <ul data-testid="test-user-hobbies">
-                Hobbies 
-                <li data-testid="test-user-swimming">Swimming </li>
-                <li data-testid="test-user-dancing">Dancing</li>
-                <li data-testid="test-user-running">Running</li>
-            </ul>
+    <figure>
+      <img src="https://zxlksbiurttzrwxvgryi.supabase.co/storage/v1/object/public/images/Gemini_Generated_Image_axx8qeaxx8qeaxx8.png" alt="Profile picture">
+      <figcaption>HIM</figcaption>
+    </figure>
 
-            <ul data-testid="test-user-dislikes">
-             Dislikes  
-             <li>Cheating </li>
-             <li>Stealing</li>
-             <li>Profanity</li>
-            </ul>
-          </section>
-        </article>
+    <ul data-testid="test-user-social-links">
+      <li data-testid="test-user-social-twitter">Twitter</li>
+      <li data-testid="test-user-social-instagram">Instagram</li>
+      <li data-testid="test-user-social-tiktok">TikTok</li>
+      <li data-testid="test-user-social-facebook">Facebook</li>
+    </ul>
 
+    <section>
+      <ul data-testid="test-user-hobbies">
+        <strong>Hobbies</strong>
+        <li data-testid="test-user-swimming">Swimming</li>
+        <li data-testid="test-user-dancing">Dancing</li>
+        <li data-testid="test-user-running">Running</li>
+      </ul>
 
-        <script>
+      <ul data-testid="test-user-dislikes">
+        <strong>Dislikes</strong>
+        <li>Cheating</li>
+        <li>Stealing</li>
+        <li>Profanity</li>
+      </ul>
+    </section>
+  </article>
 
-        </script>
+  <script>
+  </script>
+  
+</body>
+</html>
