--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
 
 <ul data-testid="test-user-social-links">
   <li>
-    <button data-testid="test-user-social-twitter" onclick="window.open('https:www.twitter.com', '_blank')">
+    <button data-testid="test-user-social-twitter" onclick="window.open('https://www.twitter.com', '_blank')">
       Twitter
     </button>
   </li>
   <li>
-    <button data-testid="test-user-social-instagram" onclick="window.open('https:www.instagram.com', '_blank')">
+    <button data-testid="test-user-social-instagram" onclick="window.open('https://www.instagram.com', '_blank')">
       Instagram
     </button>
   </li>
   <li>
-    <button data-testid="test-user-social-tiktok" onclick="window.open('https:www.tiktok.com', '_blank')">
+    <button data-testid="test-user-social-tiktok" onclick="window.open('https:www.//tiktok.com', '_blank')">
       TikTok
     </button>
   </li>
   <li>
-    <button data-testid="test-user-social-facebook" onclick="window.open('https:www.facebook.com', '_blank')">
+    <button data-testid="test-user-social-facebook" onclick="window.open('https:www.//facebook.com', '_blank')">
       Facebook
     </button>
   </li>
