--- a/pages/about.html
+++ b/pages/about.html
@@ -7,32 +7,32 @@
     <link rel="stylesheet" href="../styles/about.css">
     </head>
         <body>
-            <main>
-            <section>
+            <main data-testid="test-about-page">
+                <h2 class="page-title">About Me</h2>
+                <br>
+            <section data-testid="test-about-me">
                 <h1>Bio</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut cum ducimus provident qui fugit officiis repudiandae libero repellat eligendi unde.</p>
             </section>
-            <section>
-            <h2>Goals in this program</h2>
-                <ul>
+            <section data-testid="test-about-goals">
+            <h2>Goals in this program</h2> 
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, quis.</li>
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, praesentium!</li>
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, quod!</li>
-                </ul>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, quod!</li>     
             </section>
-            <section>
+            <section data-testid="test-about-confidence">
                 <h2>Areas of low confidence</h2>
                  <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, quis.</li>
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, praesentium!</li>
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, quod!</li>
             </section>
-            <section>
+            <section data-testid="test-about-future-note">
                 <h2>Note to future self </h2>
                  <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, quis.</li>
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, praesentium!</li>
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, quod!</li>
             </section>
-                <section>
+                <section data-testid="test-about-extra">
                 <h2> Extra thoughts</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste culpa corporis neque provident voluptatem doloremque at labore saepe itaque. Unde, adipisci minus ipsam quaerat sint harum repudiandae autem totam perferendis!</p>
             </section>
