--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
            
    
           <figure>
-            <img src="https://zxlksbiurttzrwxvgryi.supabase.co/storage/v1/object/public/images/Gemini_Generated_Image_axx8qeaxx8qeaxx8.png" alt="Profile picture">
-            <figcaption> My expertise is html , css , javascript , react , tailwind , threeJS , supabase and nodeJS.
+            <img src="https://zxlksbiurttzrwxvgryi.supabase.co/storage/v1/object/public/images/Gemini_Generated_Image_vwpyzuvwpyzuvwpy.png" alt="Profile picture">
+            <figcaption> My name is Usman Oshodi and i am a front-end developer.
+               My expertise is html , css , javascript , react , tailwind , threeJS , supabase and nodeJS.
           </figure>
 
           <div class="time">
