--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       </head>
       <body>
         <article data-testid="test-profile-card">
+          <div class="card-actions" role="navigation" aria-label="Profile actions">
+            <a class="btn btn-futuristic" href="/pages/about.html" aria-label="Go to About page">About</a>
+            <a class="btn btn-futuristic" href="/pages/contact.html" aria-label="Go to Contact page">Contact</a>
+          </div>
           <header data-testid="test-user-name">Usman</header>
 
           <p data-testid="test-user-bio">Welcome to my profile card  </p>
